# c-coursework

./: .gitignore  23762.c  CMakeLists.txt  DFT.h  inv_3.txt  plot_3m.py  q2.docx  test.c  test.txt
